<?xml version="1.0"?>
<package>
  <name>warthog_tutorials</name>
  <version>0.0.2</version>
  <description>Warthog's tutorials.</description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/Warthog</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosdoc_lite</build_depend>

  <export>
  </export>
</package>
